chore: lots of luau slopgen cleanup