@@ -4,15 +4,12 @@ import javax.annotation.processing.Messager;
 import javax.lang.model.element.Element;
 import javax.tools.Diagnostic;
 
-/// Enforces the slopgen-level shape of a [MemberDocs] block. The Luau type expressions
-/// themselves are not parsed here — that happens later in the docs module. The rules here
-/// only care about *which* tags are present and how many.
+/// Enforces the shape of a [Docs] block. The Luau type expressions are not parsed
+/// here, that happens later in the docs module. We only care about which tags are present
+/// and how many.
 public final class LuaDocsValidator {
 
-    /// Flip to `true` once every `@LuaLibrary` in the codebase has been migrated to declare
-    /// `@luaParam` / `@luaReturn` / `@luaGeneric` tags. While `false`, validator findings are
-    /// emitted as warnings instead of errors so the build keeps compiling during the
-    /// migration period.
+    /// Decides whether malformed docs are an error. Will flip to true after existing code is migrated.
     public static final boolean STRICT = false;
 
     private static final Diagnostic.Kind SEVERITY =
@@ -24,9 +21,8 @@ public final class LuaDocsValidator {
         this.messager = messager;
     }
 
-    /// Validate a `@LuaMethod`. Non-void Java methods require ≥1 `@luaReturn`; void methods
-    /// must have none.
-    public void validateMethod(Element element, MemberDocs docs, boolean javaVoid) {
+    /// Methods must have one or more declared returns if non-void. Void may not declare any returns.
+    public void validateMethod(Element element, Docs docs, boolean javaVoid) {
         reportTagDiagnostics(element, docs);
         if (javaVoid && !docs.returns().isEmpty()) {
             messager.printMessage(SEVERITY,
@@ -38,9 +34,8 @@ public final class LuaDocsValidator {
         }
     }
 
-    /// Validate a `@LuaProperty` getter (Java method whose name does not start with `set`).
-    /// Requires exactly one `@luaReturn` and zero `@luaParam`.
-    public void validateGetter(Element element, MemberDocs docs) {
+    /// Property getters must have one declared return and zero declared params.
+    public void validateGetter(Element element, Docs docs) {
         reportTagDiagnostics(element, docs);
         if (docs.returns().size() != 1) {
             messager.printMessage(SEVERITY,
@@ -52,9 +47,8 @@ public final class LuaDocsValidator {
         }
     }
 
-    /// Validate a `@LuaProperty` setter. Requires exactly one `@luaParam` and zero
-    /// `@luaReturn`.
-    public void validateSetter(Element element, MemberDocs docs) {
+    /// Property setters must have one declared param and zero declared returns.
+    public void validateSetter(Element element, Docs docs) {
         reportTagDiagnostics(element, docs);
         if (docs.params().size() != 1) {
             messager.printMessage(SEVERITY,
@@ -66,21 +60,17 @@ public final class LuaDocsValidator {
         }
     }
 
-    /// Validate a meta `@LuaMethod` (one with `meta != Meta.NONE`). Same as a regular method
-    /// for return-presence purposes — Lua metamethods may yield zero or one value, and the
-    /// existing emitter already handles void via `Model.MetaMethod.isVoid()`. Future work:
-    /// model meta param shape.
-    public void validateMeta(Element element, MemberDocs docs, boolean javaVoid) {
+    /// Meta methods must have exact params declared for its shape.
+    /// TODO: per-method shape validation.
+    public void validateMeta(Element element, Docs docs, boolean javaVoid) {
         validateMethod(element, docs, javaVoid);
     }
 
-    /// Validate that a getter and a setter for the same property declare matching types
-    /// (raw-string equality at this stage). The docs module re-validates structurally after
-    /// parsing both sides as Luau type expressions.
-    public void validatePropertyConsistency(Element setterElement, MemberDocs getter, MemberDocs setter) {
+    /// TODO: not sure this works, a setter may be less strict than a getter (eg set AnyText, get Text)
+    public void validatePropertyConsistency(Element setterElement, Docs getter, Docs setter) {
         if (getter.returns().isEmpty() || setter.params().isEmpty()) return;
-        var getType = getter.returns().get(0).typeExpr();
-        var setType = setter.params().get(0).typeExpr();
+        var getType = getter.returns().getFirst().typeExpr();
+        var setType = setter.params().getFirst().typeExpr();
         if (!getType.equals(setType)) {
             messager.printMessage(SEVERITY,
                 "Property getter @luaReturn and setter @luaParam must declare the same type ("
@@ -89,10 +79,7 @@ public final class LuaDocsValidator {
         }
     }
 
-    /// Validate library-level docs. Libraries are static-only and have no shared
-    /// generics across methods, so `@luaParam` / `@luaReturn` / `@luaGeneric` are all
-    /// rejected here — they belong on a method or accessor.
-    public void validateLibraryContainer(Element element, MemberDocs docs) {
+    public void validateLibraryContainer(Element element, Docs docs) {
         reportTagDiagnostics(element, docs);
         rejectTag(element, !docs.params().isEmpty(),
             "@luaParam is not valid on a library — declare it on a method or accessor");
@@ -102,10 +89,7 @@ public final class LuaDocsValidator {
             "@luaGeneric is not valid on a library — declare it on the method");
     }
 
-    /// Validate `@LuaExport` class-level docs. Type-level `@luaGeneric` declarations are
-    /// allowed and become shared across every method, accessor, and meta-method on that
-    /// type. Param/return tags are still rejected here — they belong on members.
-    public void validateExportContainer(Element element, MemberDocs docs) {
+    public void validateExportContainer(Element element, Docs docs) {
         reportTagDiagnostics(element, docs);
         rejectTag(element, !docs.params().isEmpty(),
             "@luaParam is not valid on a @LuaExport class — declare it on a method or accessor");
@@ -118,7 +102,7 @@ public final class LuaDocsValidator {
         if (condition) messager.printMessage(SEVERITY, message, element);
     }
 
-    private void reportTagDiagnostics(Element element, MemberDocs docs) {
+    private void reportTagDiagnostics(Element element, Docs docs) {
         for (var d : docs.diagnostics()) {
             messager.printMessage(SEVERITY, d.message(), element);
         }
